# echo

./: .env.example  .gitignore  AUDIT_BACKEND.md  Makefile  README.md  audit.md  docker-compose.sandbox.yml  docker-compose.yml
.github/workflows/: ci.yml
apps/lifeline-lab/: index.html  package-lock.json  package.json
apps/lifeline-lab/src/: App.tsx  index.css
apps/web/: Dockerfile  api_client.py  app.py  pyproject.toml
apps/web-static/: api.js  app.js  index.html  login.html  styles.css
docs/: V3_AI_LOCAL.md  backup_restore.md  bilan_v0.1.md  deploy-test.md  life-line-design-tokens.md  life-line-issues-recadrage.md  life-line-migration-conceptuelle.md  life-line-prototype-v0.md  p0-1-freeze-worm-spec.md  phase1-report.md  phase2-report.md  phase2_5-report.md  privacy.md  product.md  test-v1.md  testing.md  tests_streamlit_local.md
scripts/: backup.sh  restore.sh
services/api/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_init.py  0002_users_and_auth.py  0002_v3a_ai_plumbing.py  0003_entries_list_indexes.py  0004_entry_audio_metadata.py  0005_entry_freeze_flag.py  0006_entry_text_content.py  0007_entry_assets.py  0008_make_audio_optional.py
services/api/app/: db.py  main.py  models.py  schemas.py  security.py  settings.py  storage.py
services/api/app/ai/: utils.py
services/api/app/middleware/: request_id.py
services/api/app/routes/: auth.py  system.py
services/api/tests/: test_acl.py  test_assets_images.py  test_auth.py  test_entries.py  test_entries_list.py  test_freeze.py  test_http_security.py  test_system.py  test_upload.py  test_web_static_api_client.py
services/api/tests_e2e/: conftest.py  test_e2e_smoke.py  test_e2e_system.py
(+5 files in other folders)
