[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-mvp-api"
version = "0.1.0"
description = "Echo MVP FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
